force-app/main/default/objects/BulletinBoard__c/BulletinBoard__c.object-meta.xml
<CustomObject>
    <label>Bulletin Board</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulletin Board</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>