force-app/main/default/objects/BulletinBoard__c/fields/BoardType__c.field-meta.xml
<CustomField>
    <fullName>BoardType__c</fullName>
    <label>Board Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notice</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Q&amp;A</fullName>
                <isActive>false</isActive>
                <label>Q&amp;A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>