force-app/main/default/objects/BulletinBoard__c/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <label>Contents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>