force-app/main/default/objects/BulletinBoard__c/fields/Notice__c.field-meta.xml
<CustomField>
    <fullName>Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when we want to show the notice in HQ Mailing</description>
    <label>Notice</label>
    <type>Checkbox</type>
</CustomField>