force-app/main/default/objects/BulletinBoard__c/recordTypes/Notice.recordType-meta.xml
<RecordType>
    <fullName>Notice</fullName>
    <active>true</active>
    <label>Notice</label>
</RecordType>