force-app/main/default/objects/BulletinBoard__c/listViews/FAQ.listView-meta.xml
<ListView>
    <fullName>FAQ</fullName>
    <columns>NAME</columns>
    <columns>Contents__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BoardType__c</field>
        <operation>equals</operation>
        <value>FAQ</value>
    </filters>
    <label>FAQ</label>
</ListView>