force-app/main/default/objects/BulletinBoard__c/listViews/Manual.listView-meta.xml
<ListView>
    <fullName>Manual</fullName>
    <columns>NAME</columns>
    <columns>Contents__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BoardType__c</field>
        <operation>equals</operation>
        <value>Manual</value>
    </filters>
    <label>Manual</label>
</ListView>