force-app/main/default/objects/BulletinBoard__c/listViews/Notice.listView-meta.xml
<ListView>
    <fullName>Notice</fullName>
    <columns>NAME</columns>
    <columns>Contents__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BoardType__c</field>
        <operation>equals</operation>
        <value>Notice</value>
    </filters>
    <label>Notice</label>
</ListView>